Der kan clean installes nu
great success. alt andet sejler stadig tho